# speaky

./: CNAME  Cargo.toml  index-224cdd45235d2152.js  index-224cdd45235d2152_bg.wasm  index-24593f4648ca7ae8.js  index-24593f4648ca7ae8_bg.wasm  index-2964e0ad398de9dc.js  index-2964e0ad398de9dc_bg.wasm  index-357583750d2b139f.js  index-357583750d2b139f_bg.wasm  index-366fa528f5b595cd.js  index-366fa528f5b595cd_bg.wasm  index-37c1989d0ea908e0.js  index-4672a1a13d59d548.js  index-4672a1a13d59d548_bg.wasm  index-5894ea1979c1ae50.js  index-5894ea1979c1ae50_bg.wasm  index-621a4df62ad29391.js  index-621a4df62ad29391_bg.wasm  index-78feb4958e8f6765.js  index-78feb4958e8f6765_bg.wasm  index-858ee32a050edbf1.js  index-858ee32a050edbf1_bg.wasm  index-99f02423d10d503e.js  index-99f02423d10d503e_bg.wasm  index-a71636387bafd5ed.js  index-a71636387bafd5ed_bg.wasm  index-ae2f8ce694dd6ca2.js  index-ae2f8ce694dd6ca2_bg.wasm  index-bef3e00f489f282e.js  index-bef3e00f489f282e_bg.wasm  index-e001ecd73986103.js  index-e001ecd73986103_bg.wasm  index-e398322051696a10.js  index-e398322051696a10_bg.wasm  index-eedae4d73bb2510.js  index-eedae4d73bb2510_bg.wasm  index-fb732852425f2c4c.js  index-fb732852425f2c4c_bg.wasm  index.html  (+1 more)
.github/workflows/: audit.yml  rust.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/loid/: Cargo.toml  index.html
apps/loid/src/: app.rs  main.rs
apps/loid/src/app/: plot.rs
apps/loid/web/: style.scss
apps/pitch/: Cargo.toml
apps/pitch/src/: analysis.rs  app.rs  decode.rs  key.rs  main.rs  midi.rs  piano_roll.rs  ui_error.rs
cli/: Cargo.toml
cli/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs  spectrum.rs  tts.rs
crates/audio/: Cargo.toml
crates/audio/src/: input.rs  lib.rs  output.rs  waveform.rs
crates/spectrum/: Cargo.toml
crates/spectrum/src/: fft.rs  lib.rs
crates/tts/: Cargo.toml
crates/tts/src/: lib.rs
crates/util/: Cargo.toml
crates/util/src/: lib.rs
loid/: Cargo.toml  index.html
loid/src/: app.rs  main.rs
src/: lib.rs  main.rs  spectrum.rs  tts.rs
src/audio/: input.rs
