[workspace]
resolver = "2"
members = ["crates/*", "apps/*"]

[profile.dev-opt]
inherits = "dev"
opt-level = 1

[profile.dev-opt.package."*"]
opt-level = 2

[profile.release]
debug = 1

[patch.crates-io]
microfft = { git = "https://gitlab.com/teskje/microfft-rs.git", rev = "f783b1effe66a24984f46b3fccca00d18fda5970" }

# eframe = { path = "../egui/eframe" }
eframe = { git = "https://github.com/emilk/egui", rev = "c3ac340e25c89a866bb64d0f46517e8e7ea2101b" }
