[workspace]
resolver = "2"
members = ["crates/*", "apps/*"]

[profile.dev-opt]
inherits = "dev"
opt-level = 1

[profile.dev-opt.package."*"]
opt-level = 2

[profile.release]
debug = 1

[patch.crates-io]
microfft = { git = "https://gitlab.com/teskje/microfft-rs.git", rev = "f783b1effe66a24984f46b3fccca00d18fda5970" }

# eframe = { path = "../egui/eframe" }
eframe = { git = "https://github.com/emilk/egui", rev = "c2039920de4c4881ee04fd04658f1c086084f043" }
