[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.0"
cpal = "0.13.5"
microfft = { version = "0.4.0", features = ["size-16384"] }
num-complex = "0.4.0"
paste = "1.0.6"
rodio = { version = "0.15.0", default-features = false }
tracing = "0.1.30"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.8", features = ["env-filter"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ttspico = "0.1.5"

[features]

