[package]
name = "loid"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
eframe = "0.16.0"
common = { path = "../common" }
snmalloc-rs = { version = "0.2.28", optional = true }

[features]
snmalloc = ["snmalloc-rs"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.5"
wee_alloc = "0.4.5"
