[package]
name = "loid"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
eframe = "0.16.0"
common = { path = "../common" }
snmalloc-rs = { version = "0.2.28", optional = true }
# For WASM instant support
instant = "0.1.12"

[features]
snmalloc = ["snmalloc-rs"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.5"
# For WASM instant support
instant = { version = "0.1.12", features = ["web-sys"] }
web-sys = { version = "0.3.4", features = ["Document", "Element"] }
strip-ansi-escapes = { git = "https://github.com/luser/strip-ansi-escapes", rev = "672ce55b1ca2bce8dccd4318de48947af7892dc2" }
