[package]
name = "pitch"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.0"
tracing = "0.1.31"

# UI
eframe = { version = "0.17.0", features = ["persistence"] }

# File open dialog
rfd = "0.8.0"

# Mutable UI state between threads
atomic = { version = "0.5.1", features = ["std"] }

# Recent files queue
ritelinked = { version = "0.3.2", features = ["serde"] }

# Audio decoding
symphonia = { version = "0.5.0", features = [
    "flac",
    "pcm",
    "vorbis",
    "alac",
    "aac",
    "mp3",
    "isomp4",
    "mkv",
    "ogg",
    "wav",
] }

# Midi playback
midir = "0.7.0"
futures-lite = "1.12.0"
async-io = "1.6.0"
async-executor = "1.4.1"
flume = "0.10.12"

audio = { path = "../../crates/audio", features = ["io"] }
spectrum = { path = "../../crates/spectrum" }
util = { path = "../../crates/util" }
