[package]
name = "pitch"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.0"
tracing = "0.1.31"

# UI
eframe = { version = "0.17.0", features = ["persistence", "dark-light"] }

# File open dialog
rfd = "0.8.0"

# Mutable UI state between threads
atomic = { version = "0.5.1", features = ["std"] }
parking_lot = "0.12.0"
static_assertions = "1.1.0"
once_cell = "1.10.0"

# Recent files queue
ritelinked = { version = "0.3.2", features = ["serde"] }

# Audio decoding
symphonia = { version = "0.5.0", features = [
    "flac",
    "pcm",
    "vorbis",
    "alac",
    "aac",
    "mp3",
    "isomp4",
    "mkv",
    "ogg",
    "wav",
] }

# Spectrogram
colorous = "1.0.6"

# Midi playback
midir = "0.7.0"
futures-lite = "1.12.0"
async-io = "1.6.0"
async-executor = "1.4.1"
flume = "0.10.12"

audio = { path = "../../crates/audio", features = ["io"] }
spectrum = { path = "../../crates/spectrum" }
util = { path = "../../crates/util" }
