[package]
name = "audio"
version = "0.0.0"
edition = "2021"

publish = false

[dependencies]
color-eyre = "0.6.0" # TODO: better error handling

cpal = { version = "0.13.5", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
cpal = { version = "0.13.5", optional = true, features = ["wasm-bindgen"] }

[features]
io = ["cpal"]
