[package]
name = "audio"
version = "0.0.0"
edition = "2021"

publish = false
license = "MPL-2.0"

[dependencies]
color-eyre = "0.6.0" # TODO: better error handling
tracing = "0.1.31"
lerp = "0.4.0"

cpal = { version = "0.13.5", optional = true }
symphonia = { version = "0.5.0", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
cpal = { version = "0.13.5", optional = true, features = ["wasm-bindgen"] }

[features]
io = ["cpal", "symphonia"]
